--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                         <li><a href="/blog"
                                 class="no-underline text-gray-900 font-medium hover:text-gray-700 transition-colors">Blog</a>
                         </li>
+                        <li>
+                            <a href="/" class="bg-gray-950 text-white hover:bg-gray-900 px-6 py-3 rounded-lg no-underline font-semibold transition-all duration-300 hover:bg-primary-700 hover:-translate-y-0.5 hover:shadow-md focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">Analyze Free</a>
+                        </li>
                     </ul>
 
                     <!-- Toggle Button -->
@@ -166,6 +169,9 @@
                             Works</a></li>
                     <li><a href="/blog"
                             class="block text-gray-900 font-medium hover:text-gray-700 transition-colors">Blog</a></li>
+                    <li class="my-4">
+                        <a href="/" class="bg-gray-950 text-white hover:bg-gray-900 px-6 py-3 rounded-lg no-underline font-semibold transition-all duration-300 hover:bg-primary-700 hover:-translate-y-0.5 hover:shadow-md focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">Analyze Free</a>
+                    </li>
                 </ul>
             </div>
         </div>
