--- a/privacy.html
+++ b/privacy.html
@@ -17,22 +17,22 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.getdigitize.com/privacy">
+  <meta property="og:url" content="https://www.getdigitize.com/privacy.html">
   <meta property="og:title" content="Privacy Policy | GetDigitize">
   <meta property="og:description" content="How we collect, use, and protect your personal information at GetDigitize.">
-  <meta property="og:image" content="https://www.getdigitize.com/images/og-image.jpg">
+  <meta property="og:image" content="https://www.getdigitize.com/images/og-image.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.getdigitize.com/privacy">
+  <meta name="twitter:url" content="https://www.getdigitize.com/privacy.html">
   <meta name="twitter:title" content="Privacy Policy | GetDigitize">
   <meta name="twitter:description" content="How we collect, use, and protect your personal information at GetDigitize.">
-  <meta name="twitter:image" content="https://www.getdigitize.com/images/twitter-image.jpg">
+  <meta name="twitter:image" content="https://www.getdigitize.com/images/twitter-image.png">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.getdigitize.com/privacy">
+  <link rel="canonical" href="https://www.getdigitize.com/privacy.html">
   
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -65,14 +65,10 @@
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
-      "@id": "https://www.getdigitize.com/privacy"
+      "@id": "https://www.getdigitize.com/privacy.html"
     }
   }
   </script>
-  <!-- Basic Meta -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Primary Meta Tags -->
   <title>Privacy Policy - GetDigitize</title>
@@ -197,7 +193,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="bg-gradient-to-br from-primary-200 via-white to-primary-300 py-12 lg:py-24 mt-[65px] relative overflow-hidden" id="hero">
+  <section class="bg-gradient-to-br from-primary-200 via-white to-primary-300 py-12 lg:py-24 mt-[65px] relative overflow-hidden" id="hero" role="region" aria-label="Hero section">
     <div class="max-w-6xl mx-auto px-5">
       <div class="text-center">
         <h1 class="text-4xl md:text-6xl font-bold mt-4 mb-6 text-gray-900 !leading-tight max-w-4xl mx-auto">Privacy Policy</h1>
@@ -207,16 +203,16 @@
   </section>
 
   <!-- Privacy Policy Content -->
-  <section class="py-16 lg:py-24 relative">
+  <section class="py-16 lg:py-24 relative" role="region" aria-label="Privacy Policy section">
     <div class="max-w-4xl mx-auto px-5" itemscope itemtype="https://schema.org/PrivacyPolicy">
       <div class="prose max-w-none">
         <div class="mb-12">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">Introduction" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="introduction" tabindex="-1">Introduction</h2>
           <p class="text-gray-700 mb-6">GetDigitize ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.</p>
         </div>
 
         <div class="mb-12">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">Information We Collect" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="information-we-collect" tabindex="-1">Information We Collect</h2>
           <h3 class="text-xl font-semibold text-gray-800 mb-3">Personal Information</h3>
           <p class="text-gray-700 mb-4">We may collect personal information that you voluntarily provide to us when you:</p>
           <ul class="list-disc pl-6 text-gray-700 space-y-2 mb-6">
@@ -229,7 +225,7 @@
         </div>
 
         <div class="mb-12">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">How We Use Your Information" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="how-we-use" tabindex="-1">How We Use Your Information</h2>
           <p class="text-gray-700 mb-4">We use the information we collect to:</p>
           <ul class="list-disc pl-6 text-gray-700 space-y-2 mb-6">
             <li>Provide and maintain our services</li>
@@ -241,17 +237,17 @@
         </div>
 
         <div class="mb-12">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">Information Sharing" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="information-sharing" tabindex="-1">Information Sharing</h2>
           <p class="text-gray-700 mb-6">We do not sell, trade, or otherwise transfer your personal information to third parties without your consent, except as described in this Privacy Policy or as required by law.</p>
         </div>
 
         <div class="mb-12">
-          <h1 class="text-4xl font-bold text-gray-900 mb-6" itemprop="headline">Privacy Policy</h1>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="data-security" tabindex="-1">Data Security</h2>
           <p class="text-gray-700 mb-6">We implement appropriate technical and organizational measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.</p>
         </div>
 
         <div class="mb-12">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">Your Rights" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="your-rights" tabindex="-1">Your Rights</h2>
           <p class="text-gray-700 mb-4">You have the right to:</p>
           <ul class="list-disc pl-6 text-gray-700 space-y-2 mb-6">
             <li>Access your personal information</li>
@@ -262,7 +258,7 @@
         </div>
 
         <div class="bg-gray-100 p-6 rounded-lg">
-          <h2 class="text-2xl font-bold text-gray-900 mb-4">Contact Us" tabindex="-1"></h2>
+          <h2 class="text-2xl font-bold text-gray-900 mb-4" id="contact-us" tabindex="-1">Contact Us</h2>
           <p class="text-gray-700 mb-2">If you have questions about this Privacy Policy, please contact us at:</p>
           <p class="text-gray-700 mb-1">Email: <a href="mailto:contact@getdigitize.com" class="text-primary-700 hover:underline">contact@getdigitize.com</a></p>
           <p class="text-gray-700">Address: 1007 N Orange St, Wilmington, DE, 19801</p>
@@ -284,9 +280,9 @@
               </svg></a><a href="https://facebook.com/social9" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-primary-700 transition-colors" aria-label="Facebook"><span class="sr-only">Facebook</span><svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                 <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd"></path>
               </svg></a><a href="https://instagram.com/social9" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-primary-700 transition-colors" aria-label="Instagram"><span class="sr-only">Instagram</span><svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 01-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" clip-rule="evenodd"></path>
+                <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" clip-rule="evenodd"></path>
               </svg></a><a href="https://linkedin.com/company/social9" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-primary-700 transition-colors" aria-label="LinkedIn"><span class="sr-only">LinkedIn</span><svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
-                <path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd"></path>
+                <path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd"></path>
               </svg></a></div>  -->
         </div>
         <div class="lg:col-span-2 lg:col-start-6">
