--- a/index.html
+++ b/index.html
@@ -70,17 +70,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <!-- Styles & Scripts -->
-  <link rel="stylesheet" href="dist/output.css">
-  <!-- <script>
-        // Replace existing CSS link with one that includes a timestamp
-        window.onload = function () {
-            const link = document.createElement('link');
-            link.rel = 'stylesheet';
-            link.type = 'text/css';
-            link.href = 'dist/output.css?v=' + new Date().getTime();
-            document.head.appendChild(link);
-        };
-    </script> -->
+  <link rel="stylesheet" href="dist/output.css?v=1.0.0">
+
   <script defer>
     // Toggle mobile menu and icon
     document.addEventListener("DOMContentLoaded", function() {
