--- a/privacy.html
+++ b/privacy.html
@@ -120,7 +120,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <!-- Styles & Scripts -->
-  <link rel="stylesheet" href="dist/output.css">
+  <link rel="stylesheet" href="dist/output.css?v=1.0.0">
   <script defer>
     // Toggle mobile menu and icon
     document.addEventListener("DOMContentLoaded", function() {
